--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -1,18 +1,56 @@
 @import "../../styles/variables.scss";
 
-.button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 199px;
-    height: 78px;
-    background-color: $white;
-    color: $black;
-    border: none;
-    cursor: pointer;
-    font-size: 20px;
-    line-height: 30px;
-    font-weight: 600;
-    text-align: center;
+.default {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 199px;
+  height: 78px;
+  background-color: $white;
+  color: $black;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 600;
+  text-align: center;
 
+  &.darkmode{
+    background-color: #333;
+    color: rgba(255, 255, 255, 0.87);
+ 
+  }
+
+  &.lightmode{
+     background-color: $white;
+    color: #333;
+  
+  }
+}
+
+.modeBtn {
+  &.darkmode,
+  &.lightmode {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: $black;
+    border-radius: 50%;
+
+    span {
+      display: inline-block;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      height: 50px;
+      font-size: 30px;
+    }
+  }
+
+  &.lightmode {
+    background-color: $white;
+  }
 }
