--- a/src/components/input/Input.scss
+++ b/src/components/input/Input.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
 .input {
-    width: 520px;
+    width: 100%;
     height: 59px;
     padding: 16px 24px;
     box-sizing: border-box;
