--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,12 +3,26 @@
 body {
     height: auto;
     display: block;
-    place-items:initial;
-    background-color: $black;
-    color: rgba(255, 255, 255, 0.87);
+    margin: 0;
+    min-height: 100vh;
+    background-color: #333;
+
+    &.darkmode {
+        background-color: #333;
+        color: rgba(255, 255, 255, 0.87);
+    }
+
+    &.lightmode {
+        background-color: $white;
+        color: #333;
+    }
+  
 }
 
 .container {
     margin: 0 auto;
     max-width: 1200px;
+    padding-top: 78px;
+
+
 }
