--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -7,7 +7,6 @@
     align-items: center;
     padding: 58px 56px;
 
-
     &-content {
       display: flex;
       flex-direction: column;
@@ -28,26 +27,42 @@
         line-height: 27px;
         font-weight: 400;
       }
-    }
-    @media screen and (max-width : $breakpoint-mobile) {
-        flex-direction: column-reverse;
-        padding : 32px 24px;
 
-        &__content-image{
-            margin-bottom: 20px;
+      
+    }
+    &__content-image {
+      width: 50%;
+      margin-bottom: 20px;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    @media screen and (max-width: $breakpoint-mobile) {
+      flex-direction: column-reverse;
+      padding: 32px 24px;
+
+      &__content-image {
+        width: 200px;
+        margin-bottom: 20px;
+
+        img {
+          width: 100%;
+          height: 100%;
         }
-        
-        &__content-title {
-            h1 {
-                line-height: 100%;
-                margin: 10px 0;
-                font-size: 48px ;
-            }
-        
+      }
+
+      &__content-title {
+        h1 {
+          line-height: 100%;
+          margin: 10px 0;
+          font-size: 48px;
         }
-        .button {
-            margin: 0 auto;
-        }
+      }
+      .button {
+        margin: 0 auto;
+      }
     }
   }
 
@@ -72,65 +87,23 @@
         flex-wrap: wrap;
         gap: 24px;
       }
-
-    
+     
     }
-    @media screen and (max-width : $breakpoint-mobile) {
-        .section-card__content {
-            flex-direction: column;
-
-            &-grid {
-                gap: 0;
-            }
-        }
-      }
-  }
-
-  &-contact {
- padding: 42px 24px 86px;
-    .section-contact__title {
-      h2 {
-        font-size: 32px;
-        line-height: 42px;
-        font-weight: 600;
-        text-align: left;
-        margin-bottom: 24px;
-      }
-    }
-    .section-contact__content {
-      display: flex;
-      justify-content: space-between;
-      gap: 24px;
-      
-      .section-contact__social {
-        width: 50%;
-    
-      }
-      .section-contact__form {
-        width: 50%;
-        form {
-          display: flex;
-          flex-direction: column;
-          gap: 24px;
-        }
-  
-      }
-      @media screen and (max-width : $breakpoint-mobile) {
+    @media screen and (max-width: $breakpoint-mobile) {
+      .section-card__content {
         flex-direction: column;
 
-        .section-contact__social,
-        .section-contact__form{
-            width: 100%;
+        &-grid {
+          gap: 0;
         }
+      }
+    }
 
-        .section-contact__form {
-            margin-top: 20px;
-            button {
-                margin: 0 auto;
-            }
-        }
+    .button-box {
+      display: flex;
+      justify-content: flex-end;
+      margin-top: 50px;
     }
-    }
- 
   }
+
 }
