디데일페이지 작업

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,11 +10,13 @@ body {
     &.darkmode {
         background-color: #333;
         color: rgba(255, 255, 255, 0.87);
+        border-color:$white;
     }
 
     &.lightmode {
         background-color: $white;
         color: #333;
+        border-color: $black;
     }
   
 }
