--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -6,6 +6,7 @@
     left: 50%;
     transform: translateX(-50%);
     background-color: rgba($color: #333, $alpha: 1.0);
+    z-index: 100;
   .header__container {
     position: relative;
     width: 1200px;
