이미지 교체, 버튼 위치 수정, 링크 수정

--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -99,12 +99,13 @@
 
   //작업물 카드
   &-work {
+    position: relative;
     width: calc((100% - 24px) / 2);
     height: auto;
     margin-bottom: 24px;
     border-radius: $radius-lg;
     overflow: hidden;
-    padding: 20px 20px;
+    padding: 20px 20px 90px;
     border: 1px solid var(--border-color);
     box-shadow: $shadow-sm;
     transition:
@@ -165,8 +166,10 @@
       color: var(--text-secondary);
     }
     &__actions {
-      margin-top: 14px;
       display: inline-flex;
+      position: absolute;
+      right: 20px;
+      bottom: 20px;
     }
     &__logo-fallback {
       display: inline-flex;
