--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -50,14 +50,24 @@
     }
   }
 
-  &:global(.darkmode) {
+  :global(body.darkmode) & {
     background: var(--card-bg);
     color: var(--text-primary);
+    .header__menu-toggle {
+      svg {
+        color: #fff;
+      }
+    }
   }
 
-  &:global(.lightmode) {
+  :global(body.lightmode) & {
     background: var(--card-bg);
     color: var(--text-primary);
+    .header__menu-toggle {
+      svg {
+        color: inherit;
+      }
+    }
   }
 }
 
@@ -88,6 +98,12 @@
         opacity: 0;
         visibility: hidden;
         transition: all 0.3s ease;
+        :global(body.darkmode) & {
+          background: rgba(13, 18, 31, 0.9);
+        }
+        :global(body.lightmode) & {
+          background: rgba(255, 255, 255, 0.9);
+        }
 
         &--open {
             transform: translateX(0);
